# novo

./: .gitmodules  CMakeLists.txt  readme.md
novo-core/: CMakeLists.txt
novo-core/includes/novo-core/: Application.hpp  Camera.hpp  CurrentCamera.hpp  IBO.hpp  Material.hpp  Resources.hpp  Scene.hpp  Shader.hpp  Texture2D.hpp  VAO.hpp  VBO.hpp  Window.hpp  test.hpp
novo-core/includes/novo-core/Mesh/: Box.hpp  LightSource.hpp  MeshBase.hpp  MeshID.hpp  Plane.hpp  Triangle.hpp
novo-core/precompile/novo-precompiles/: DefaultShader.h  Layouts.h
novo-core/src/novo-core/: test.cpp
novo-editor/: CMakeLists.txt
novo-editor/res/materials/: box_material.json
novo-editor/res/scenes/: empty.json  scene0.json
novo-editor/res/shaders/: fragment.glsl  light_source.frag  light_source.vert  object.frag  object.vert  vertex.glsl
novo-editor/src/: Application.hpp  Debugger.hpp  main.cpp
